# MPC-Pacmod

mpc/: CMakeLists.txt  README.md  package.xml
mpc/include/: MPC.h  MPC_Util.h
mpc/src/: MPC.cpp  MPC_Util.cpp  mpc_main.cpp
mpc_pacmod_interface/: README.md
mpc_pacmod_interface/msgs/autoware_msgs/: CMakeLists.txt
mpc_pacmod_interface/msgs/mpc_msgs/: CMakeLists.txt  package.xml
mpc_pacmod_interface/msgs/mpc_msgs/msg/: Ctrl.msg  Trajectory.msg
mpc_pacmod_interface/node/: CMakeLists.txt  package.xml
mpc_pacmod_interface/node/include/: globals.h  publish_control_board.h
mpc_pacmod_interface/node/launch/: autoware_pacmod_interface.launch
mpc_pacmod_interface/node/src/: autoware_pacmod_interface_node.cpp  publish_control_board.cpp
